--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
+    "@lightenna/react-mermaid-diagram": "^1.0.22",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -36,6 +37,7 @@
     "react-router-dom": "^6.16.0",
     "react-select": "^5.10.2",
     "react-to-print": "^3.2.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
