--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview --host :: --port 3000"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.996.0",
+    "@aws-sdk/client-dynamodb": "^3.996.0",
+    "@aws-sdk/client-sts": "^3.996.0",
+    "@aws-sdk/credential-providers": "^3.996.0",
+    "@aws-sdk/lib-dynamodb": "^3.996.0",
     "@emotion/is-prop-valid": "^1.3.1",
     "@lightenna/react-mermaid-diagram": "^1.0.22",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -23,17 +28,18 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
-    "@supabase/supabase-js": "^2.47.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
+    "oidc-client-ts": "^3.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.4",
+    "react-oidc-context": "^3.3.0",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.10.2",
     "react-to-print": "^3.2.0",
